# SmartCADD

./: .gitignore  README.md  conda-environment.yml  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: pylint.yml
docs/: conf.py  index.md  index.rst  template.md
eli_project_template/: layers.py
examples/: README.md  Tautomers_and_Protomers_tutorial.ipynb  smartcadd-tutorial.ipynb
experiments/experiment_a/: README.md  layers.py  loader.py  models.py  run.py  utils.py
experiments/experiment_a/artifacts/: README.md
experiments/experiment_a/configs/: README.md  sweep-sizes.py
experiments/experiment_a/models/: README.md
experiments/experiment_a/plots/: README.md
experiments/experiment_a/results/: results.md
experiments/experiment_a/scripts/: aggregate_results.py
experiments/experiment_a/shell_scripts/: config.json  entrypoint.sh  run.sh
playground/: README.md
smartcadd/: data.py  dataset.py  filters.py  model_wrappers.py  modules.py  pipeline.py  utils.py
tests/: test_data.py  test_filters.py  test_pipeline.py
