[tool.poetry]
name = "smartcadd"
version = "0.1.0"
description = ""
authors = ["Eli Laird <ejlaird@smu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
pandas = "^2.2.1"
rdkit = "^2023.9.5"
deepchem = "^2.7.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
