[tool.poetry]
name = "smartcadd"
version = "0.1.0"
description = ""
authors = ["Eli Laird <ejlaird@smu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
pandas = "^2.2.1"
rdkit = "^2023.9.5"
deepchem = "^2.7.1"
numpy = "^1.26.4"
xtb = "^22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
