[project]
name = "smartcadd"
version = "0.1.0"
description = "SmartCADD is an open-source virtual screening platform that combines deep learning, computer-aided drug design (CADD), and quantum mechanics methodologies within a user-friendly Python framework."
requires-python = ">=3.10"
authors = ["Eli Laird <ejlaird@smu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
pandas = "^2.2.1"
rdkit = "^2023.9.5"
deepchem = "^2.7.1"
numpy = "^1.26.4"
xtb = "^22.1"
openmm = "^0.2"
mdanalysis = "^2.7.0"
pybel = "^0.15.5"
torch = "^2.2.2"
dgl = "==1.1.2"
dgllife = "^0.2.1"

[build-system]
requires = [""]
build-backend = ""
